Closed
Bug 1683784
Opened 4 years ago
Closed 4 years ago
Extra `#` in error message for assigning to a private method
Categories
(Core :: JavaScript Engine, defect, P1)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
86 Branch
| Tracking | Status | |
|---|---|---|
| firefox86 | --- | fixed |
People
(Reporter: jorendorff, Assigned: jon4t4n)
References
Details
Attachments
(1 file)
It's illegal to assign to a private method. They're not properties.
But the error message is a bit off:
class C {
#x() {}
constructor() { this.#x = 1; }
}
new C;
TypeError: ##x is read-only
It should be #x, not ##x.
| Assignee | ||
Comment 1•4 years ago
|
||
I would like to work on this bug, and I have a patch ready. Who should I set as the reviewer?
Comment 2•4 years ago
|
||
Jotan: You can assign to myself or :jorendorff!
Thanks for your interest in working on this, apologies for the delay in reply.
Flags: needinfo?(jonatan.r.klemets)
| Assignee | ||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → jonatan.r.klemets
Status: NEW → ASSIGNED
| Assignee | ||
Updated•4 years ago
|
Flags: needinfo?(jonatan.r.klemets)
Pushed by mgaudet@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c5fe59c15b01
Remove extra '#' in read-only error message for SymbolCode::PrivateNameSymbol. r=mgaudet
Comment 5•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox86:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•