Bug 1683784 - Remove extra '#' in read-only error message for SymbolCode::PrivateNameSymbol. r=mgaudet

Differential Revision: https://phabricator.services.mozilla.com/D102257